--- a/css/common/layout.css
+++ b/css/common/layout.css
@@ -183,18 +183,22 @@ a[href^="tel:"] {
 	width: 20.1rem;
 }
 #gHeader .hUserBox {
+
+}
+#gHeader .hUserBox {
 	width: auto;
 	position: relative;
+	cursor: pointer;
 }
-#gHeader .hUserBox  {
+#gHeader .hUserBox a {
 	padding: 3rem 2rem 2.9rem 0;
 	display: flex;
 	align-items: center;
-	background: url("../../img/common/icon07.png") no-repeat right center / 1.6rem auto;
 }
 #gHeader .notice-user-box {
 	display: flex;
 	align-items: center;
+	margin-left: auto;
 }
 #gHeader .icon.bell {
 	width: 2.5rem;
@@ -237,7 +241,7 @@ a[href^="tel:"] {
 
   
   /* モーダルと背景の指定 */
-  #gHeader .notice-modal{
+  #gHeader .modal-outer{
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -251,6 +255,7 @@ a[href^="tel:"] {
 	visibility: hidden;
 	transition: .3s;
 	box-sizing: border-box;
+	z-index: 1000;
   }
   
   /* モーダルの擬似要素の指定 */
@@ -300,6 +305,7 @@ a[href^="tel:"] {
 	background: #fff;
 	text-align: left;
 	line-height: 1.8;
+	display: block;
   }
   /* モーダルのコンテンツ部分のテキストの指定 */
   #gHeader .notice-box li {
@@ -404,36 +410,57 @@ background: #DFEAF1;
 	font-size: 1.2rem;
 	color: #8F8F8F;
 }
-#gHeader .hUserBox .subList {
-	width: 25.9rem;
-	box-sizing: border-box;
-	position: absolute;
-	top: 100%;
+/* #gHeader .hUserBox-list {
+		position: fixed;
+	top: 0;
 	left: 0;
+	width: 100%;
+	height: 100%;
+	text-align: center;
+	padding: 40px 20px;
+	overflow: auto;
+	opacity: 0;
+	visibility: hidden;
+	transition: .3s;
+	box-sizing: border-box;
+	z-index: 1000;
+} */
+
+#gHeader .hUserBox-list .subList {
+	position: absolute;
+    top: 110%;
+    right: 4%;
+	width: 33rem;
+	box-sizing: border-box;
 	border: 0.1rem solid #E5E5E5;
 	background: #fff;
+	border-radius: 1.3rem;
 	display: none;
+
 }
-#gHeader .hUserBox .subList li:not(:last-child) {
+#gHeader .hUserBox-list .subList.is-active {
+	display: block;
+}
+#gHeader .hUserBox-list .subList li:not(:last-child) {
 	border-bottom: 0.1rem solid #E5E5E5;
 }
-#gHeader .hUserBox .subList li a {
-	padding: 1.9rem 2rem;
+#gHeader .hUserBox-list .subList li a {
+	padding: 1.9rem 3rem;
 	display: flex;
 	align-items: center;
 	font-size: 1.4rem;
 }
-#gHeader .hUserBox .subList li a .icon {
+#gHeader .hUserBox-list .subList li a .icon {
 	margin-right: 0.9rem;
 	width: 1.7rem;
 	font-size: 0;
 	line-height: 0;
 }
-#gHeader .hUserBox .subList li.item01 a .icon {
+#gHeader .hUserBox-list .subList li.item01 a .icon {
 	margin-right: 0.8rem;
 	width: 1.8rem;
 }
-#gHeader .hUserBox .subList li a .icon .hover {
+#gHeader .hUserBox-list .subList li a .icon .hover {
 	display: none;
 }
 #gHeader .hUserBox .userName {
