--- a/css/common/general.css
+++ b/css/common/general.css
@@ -67,6 +67,15 @@
 		padding: 0;
 		max-width: 86.33%;
 	}
+	.flexD {
+		justify-content: center;
+		row-gap: 2rem;
+		column-gap: 1rem;
+	}
+	.flexE {
+		justify-content: space-between;
+		margin: 0 2rem;
+	}
 }
 @media all and (max-width: 599px) {
 	.content {
