--- a/css/student.css
+++ b/css/student.css
@@ -323,6 +323,16 @@
 	box-shadow: 0 0 1.5rem rgba(0, 0, 0, 0.04);
     text-align: center;
 }
+#main .results.taco {
+	box-sizing: border-box;
+	padding: 2.2rem 4.5rem 3.2rem;
+	/* width: calc(37% - 2.4rem); */
+	position: relative;
+	border-radius: 1.4rem;
+	background: #fff;
+	box-shadow: 0 0 1.5rem rgba(0, 0, 0, 0.04);
+    text-align: center;
+}
 
 #main .message .messageList {
 	margin: 0 1.6rem;
@@ -752,9 +762,12 @@
 	#main .companyBox .imgList {
 		margin: -2.8rem 0 0;
 	}
+	#main .companyBox .imgList.flex  {
+		justify-content: center;
+	} 
 	#main .companyBox .imgList li {
 		margin: 2.8rem 2.8rem 0 0;
-		width: calc(20% - 2.3rem);
+		width: calc(23% - 2.3rem);
 	}
 	#main .companyBox .imgList li:nth-child(5n) {
 		margin-right: 0;
@@ -774,6 +787,7 @@
 	}
 	#main .companyBox .imgList li .textBox {
 		margin: 0;
+
 	}
 	#main .companyBox .imgList li .text01 {
 		margin-bottom: 0.2rem;
